--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "bruinplanner-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://localhost:8080",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
