--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "mongoose": "^5.10.15",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "request": "^2.88.2"
