--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Plan out your 4 years at UCLA with BruinPlanner!",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "server": "nodemon app.js"
   },
   "repository": {
