--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "mongoose": "^5.10.15",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
