--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
+    "react-dnd-scrollzone": "^5.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
