Redesigned contact page and hooked feedback submission to personal email

--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "homepage": "https://github.com/jchangz01/bruinplanner#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.15",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
